# rust-vfs-wasm32-unknown-unknown

./: Cargo.toml  README.md  test.js
src/: lib.rs
tests/: web.rs
