[package]
name = "rust-vfs-wasm32-unknown-unknown"
version = "0.1.0"
authors = ["Piotr Roslaniec <p.roslaniec@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = "0.1.7"
vfs = "0.12.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
